{
  "version": 4,
  "terraform_version": "0.12.7",
  "serial": 490,
  "lineage": "baaa112e-3ad9-7fb7-f338-324f0f7ad5fa",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "alb_backend_tg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:698253495245:targetgroup/alb-backend/58e29f7223f2b962",
            "arn_suffix": "targetgroup/alb-backend/58e29f7223f2b962",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 5,
                "matcher": "200-308",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 4,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:698253495245:targetgroup/alb-backend/58e29f7223f2b962",
            "lambda_multi_value_headers_enabled": false,
            "name": "alb-backend",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0cc7d869258becee6"
          },
          "depends_on": [
            "aws_vpc.ravindravpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "alb_front_https_tg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:698253495245:targetgroup/alb-front-https/6ebc18b606e0a859",
            "arn_suffix": "targetgroup/alb-front-https/6ebc18b606e0a859",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 5,
                "matcher": "200-308",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 4,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:698253495245:targetgroup/alb-front-https/6ebc18b606e0a859",
            "lambda_multi_value_headers_enabled": false,
            "name": "alb-front-https",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0cc7d869258becee6"
          },
          "depends_on": [
            "aws_vpc.ravindravpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "alb_backend-01_http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:698253495245:targetgroup/alb-front-https/6ebc18b606e0a859-20190915131522768700000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:698253495245:targetgroup/alb-front-https/6ebc18b606e0a859",
            "target_id": "i-09a031f18c53c62f7"
          },
          "depends_on": [
            "aws_alb_target_group.alb_front_https_tg",
            "aws_instance.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "alb_backend-02_http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:698253495245:targetgroup/alb-backend/58e29f7223f2b962-20190915133452437600000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:698253495245:targetgroup/alb-backend/58e29f7223f2b962",
            "target_id": "i-0e5f06b11d3aa94e6"
          },
          "depends_on": [
            "aws_alb_target_group.alb_backend_tg",
            "aws_instance.db"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-099ef24fad97c86ee",
            "domain": "vpc",
            "id": "eipalloc-0dfacba50d2ecccb8",
            "network_interface": "eni-0d2209f0bebce9c86",
            "private_dns": "ip-10-0-1-91.ec2.internal",
            "private_ip": "10.0.1.91",
            "public_dns": "ec2-100-25-240-95.compute-1.amazonaws.com",
            "public_ip": "100.25.240.95",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b898040803850657",
            "arn": "arn:aws:ec2:us-east-1:698253495245:instance/i-0e5f06b11d3aa94e6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0e5f06b11d3aa94e6",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ravi",
            "monitoring": false,
            "primary_network_interface_id": "eni-01c375303e12f3e79",
            "private_dns": "ip-10-0-3-138.ec2.internal",
            "private_ip": "10.0.3.138",
            "public_dns": "ec2-18-207-121-88.compute-1.amazonaws.com",
            "public_ip": "18.207.121.88",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-01765aa3c20b2998b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0125c1886c8b8a409",
            "tags": {
              "Name": "terraform-private"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00e1f3a8125941b59"
            ]
          },
          "depends_on": [
            "aws_security_group.sg_22",
            "aws_subnet.private1",
            "data.template_file.user_data"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b898040803850657",
            "arn": "arn:aws:ec2:us-east-1:698253495245:instance/i-09a031f18c53c62f7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-09a031f18c53c62f7",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ravi",
            "monitoring": false,
            "primary_network_interface_id": "eni-05ba9bd541bf4e0bf",
            "private_dns": "ip-10-0-1-37.ec2.internal",
            "private_ip": "10.0.1.37",
            "public_dns": "ec2-34-237-91-111.compute-1.amazonaws.com",
            "public_ip": "34.237.91.111",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0090d0ad18195f052",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c77c13f92e942aa1",
            "tags": {
              "Name": "terraform"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-00e1f3a8125941b59"
            ]
          },
          "depends_on": [
            "aws_security_group.sg_22",
            "aws_subnet.public1",
            "data.template_file.user_data"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-08b0a4dc5517d7284",
            "owner_id": "698253495245",
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-0cc7d869258becee6"
          },
          "depends_on": [
            "aws_vpc.ravindravpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "backend",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:698253495245:loadbalancer/app/private/bd6c9fe0abdffbe7",
            "arn_suffix": "app/private/bd6c9fe0abdffbe7",
            "dns_name": "internal-private-1234239695.us-east-1.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:698253495245:loadbalancer/app/private/bd6c9fe0abdffbe7",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "private",
            "security_groups": [
              "sg-00e1f3a8125941b59"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0125c1886c8b8a409"
              },
              {
                "subnet_id": "subnet-03c8292d958876b04"
              }
            ],
            "subnets": [
              "subnet-0125c1886c8b8a409",
              "subnet-03c8292d958876b04"
            ],
            "tags": {
              "Environment": "production"
            },
            "vpc_id": "vpc-0cc7d869258becee6",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "depends_on": [
            "aws_security_group.sg_22",
            "aws_subnet.private1",
            "aws_subnet.private2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "front_end",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:698253495245:loadbalancer/app/test-lb-tf/926819d7967174ce",
            "arn_suffix": "app/test-lb-tf/926819d7967174ce",
            "dns_name": "test-lb-tf-1306783415.us-east-1.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:698253495245:loadbalancer/app/test-lb-tf/926819d7967174ce",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-lb-tf",
            "security_groups": [
              "sg-00e1f3a8125941b59"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-046008558f24b1738"
              },
              {
                "subnet_id": "subnet-0c77c13f92e942aa1"
              }
            ],
            "subnets": [
              "subnet-046008558f24b1738",
              "subnet-0c77c13f92e942aa1"
            ],
            "tags": {
              "Environment": "production"
            },
            "vpc_id": "vpc-0cc7d869258becee6",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "depends_on": [
            "aws_security_group.sg_22",
            "aws_subnet.public1",
            "aws_subnet.public2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "backend",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:698253495245:listener/app/private/bd6c9fe0abdffbe7/f68062408efe21db",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:698253495245:targetgroup/alb-backend/58e29f7223f2b962",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:698253495245:listener/app/private/bd6c9fe0abdffbe7/f68062408efe21db",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:698253495245:loadbalancer/app/private/bd6c9fe0abdffbe7",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_alb_target_group.alb_backend_tg",
            "aws_lb.backend"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:698253495245:listener/app/test-lb-tf/926819d7967174ce/d6b428e14ebb8c27",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:698253495245:targetgroup/alb-front-https/6ebc18b606e0a859",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:698253495245:listener/app/test-lb-tf/926819d7967174ce/d6b428e14ebb8c27",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:698253495245:loadbalancer/app/test-lb-tf/926819d7967174ce",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_alb_target_group.alb_front_https_tg",
            "aws_lb.front_end"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dfacba50d2ecccb8",
            "id": "nat-0daaa625ca8b50350",
            "network_interface_id": "eni-0d2209f0bebce9c86",
            "private_ip": "10.0.1.91",
            "public_ip": "100.25.240.95",
            "subnet_id": "subnet-0c77c13f92e942aa1",
            "tags": {
              "Name": "gw NAT"
            }
          },
          "depends_on": [
            "aws_eip.nat",
            "aws_subnet.public1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-00ebfe6e61acd74fc",
            "owner_id": "698253495245",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0daaa625ca8b50350",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private-Subnet-1"
            },
            "vpc_id": "vpc-0cc7d869258becee6"
          },
          "depends_on": [
            "aws_nat_gateway.gw",
            "aws_vpc.ravindravpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0485edabc47dbcef8",
            "owner_id": "698253495245",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08b0a4dc5517d7284",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public-Subnet-1"
            },
            "vpc_id": "vpc-0cc7d869258becee6"
          },
          "depends_on": [
            "aws_internet_gateway.gw",
            "aws_vpc.ravindravpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-078b49277ffe07f36",
            "route_table_id": "rtb-00ebfe6e61acd74fc",
            "subnet_id": "subnet-0125c1886c8b8a409"
          },
          "depends_on": [
            "aws_route_table.private1",
            "aws_subnet.private1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a5ad12888d616ae6",
            "route_table_id": "rtb-00ebfe6e61acd74fc",
            "subnet_id": "subnet-03c8292d958876b04"
          },
          "depends_on": [
            "aws_route_table.private1",
            "aws_subnet.private2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0243de0248caf9c57",
            "route_table_id": "rtb-0485edabc47dbcef8",
            "subnet_id": "subnet-0c77c13f92e942aa1"
          },
          "depends_on": [
            "aws_route_table.public1",
            "aws_subnet.public1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05853b75f54c18890",
            "route_table_id": "rtb-0485edabc47dbcef8",
            "subnet_id": "subnet-046008558f24b1738"
          },
          "depends_on": [
            "aws_route_table.public1",
            "aws_subnet.public2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_22",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:698253495245:security-group/sg-00e1f3a8125941b59",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00e1f3a8125941b59",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sg_22",
            "name_prefix": null,
            "owner_id": "698253495245",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0cc7d869258becee6"
          },
          "depends_on": [
            "aws_vpc.ravindravpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:698253495245:subnet/subnet-0125c1886c8b8a409",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0125c1886c8b8a409",
            "map_public_ip_on_launch": true,
            "owner_id": "698253495245",
            "tags": {
              "Name": "Private-Subnet-1"
            },
            "vpc_id": "vpc-0cc7d869258becee6"
          },
          "depends_on": [
            "aws_vpc.ravindravpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:698253495245:subnet/subnet-03c8292d958876b04",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-03c8292d958876b04",
            "map_public_ip_on_launch": true,
            "owner_id": "698253495245",
            "tags": {
              "Name": "Private-Subnet-2"
            },
            "vpc_id": "vpc-0cc7d869258becee6"
          },
          "depends_on": [
            "aws_vpc.ravindravpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:698253495245:subnet/subnet-0c77c13f92e942aa1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0c77c13f92e942aa1",
            "map_public_ip_on_launch": true,
            "owner_id": "698253495245",
            "tags": {
              "Name": "Public-Subnet-1"
            },
            "vpc_id": "vpc-0cc7d869258becee6"
          },
          "depends_on": [
            "aws_vpc.ravindravpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:698253495245:subnet/subnet-046008558f24b1738",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-046008558f24b1738",
            "map_public_ip_on_launch": true,
            "owner_id": "698253495245",
            "tags": {
              "Name": "Public-Subnet-2"
            },
            "vpc_id": "vpc-0cc7d869258becee6"
          },
          "depends_on": [
            "aws_vpc.ravindravpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ravindravpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:698253495245:vpc/vpc-0cc7d869258becee6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03f38cd8983f344d7",
            "default_route_table_id": "rtb-057a52b394133f9ff",
            "default_security_group_id": "sg-0ad296c2e6012e187",
            "dhcp_options_id": "dopt-894d56f2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0cc7d869258becee6",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-057a52b394133f9ff",
            "owner_id": "698253495245",
            "tags": {
              "Name": "ravindravpc"
            }
          }
        }
      ]
    }
  ]
}